--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Official Website</title>
+     <title>Official Website</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />      
-    </head>
-    <body style="background-image: background2.jpg;" id="page-top">
+    
+    <body style="background-color: black;" id="page-top">
         <!-- Masthead-->
-       <header class="masthead bg-primary text-white text-right"> 
+   <header    class="masthead bg-primary text-white text-middle"> 
             <!-- Masthead Avatar Image-->
-            <img class="masthead-avatar mb-4" src="ishwor.jpg"
+          <img class="masthead-avatar mb-4" src="ishwor.jpg" class="circle"
             alt="..." />
             <!-- Masthead Heading-->
         <p style="color:grey;""font-size:20px;"><strong>Ishwor Subedi</strong></p>
@@ -25,10 +25,12 @@
                 <a href="https://m.youtube.com/@subedishwor"><i class="fab fa-youtube"></i></a>
                 <a href="https://github.com/Subedishwor"><i class="fab fa-github"></i></a>
             </nav>
-        </header>
+      </header>  
+      
         <!-- Copyright Section-->
         <footer>
             <marquee><font color="red"><b>&copy; All rights reserved</b></font></marquee>
-        </footer>
+    </head>   
+     </footer>
     </body>
 </html>
