--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 	<div class="container">
 		     <img src="ishwor.jpg" class="circle"
             alt="..." />
-		<h1>Ishwor Subedi</h1>
-		<p>Student</p>
+		     <p style="color:white;""font-size:20px;"><strong>Ishwor Subedi</strong></p>
+<p style="color:white;"><em>Student</em></p>
+<p style="color:white;"><small>subedishwor00@gmail.com</small></p>
 		<div class="social-media">
 			        <nav>
                 <a href="https://www.facebook.com/1ntrovertt"><i class="fab fa-facebook"> </i>
