--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome</title>
+	<title>Ishwor Subedi Official Website</title>
    <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -23,8 +23,8 @@
 		}
 		
 		.photo {
-			width: 100px;
-			height: 100px;
+			width: 200px;
+			height: 200px;
 			border-radius: 50%;
 			object-fit: cover;
 			margin-bottom: 20px;
@@ -60,7 +60,7 @@
 </head>
 <body>
 	<div class="container">
-		     <img src="ishwor.jpg" class="circle"
+		           <img class="masthead-avatar mb-4" src="ishwor.jpg" class="circle"
             alt="..." />
 		     <p style="color:white;""font-size:20px;"><strong>Ishwor Subedi</strong></p>
 <p style="color:white;"><em>Student</em></p>
