--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
 </head>
 <body>
 	<div class="container">
-		           <img class="masthead-avatar mb-4" src="ishwor.jpg" class="circle"
-            
-		     <p style="color:white;""font-size:20px;"><strong>Ishwor Subedi</strong></p>
+		          <img src="ishwor.jpg" alt="subedishwor.com" width="104" height="142">
+  <p style="color:white;""font-size:20px;"><strong>Ishwor Subedi</strong></p>
 <p style="color:white;"><em>Student</em></p>
 <p style="color:white;"><small>subedishwor00@gmail.com</small></p>
 		<div class="social-media">
