--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 	<div class="container">
-		          <img src="ishwor.jpg" alt="subedishwor.com" width="104" height="142">
+		          <img src="ishwor.jpg"  width="104" height="142"/>
   <p style="color:white;""font-size:20px;"><strong>Ishwor Subedi</strong></p>
 <p style="color:white;"><em>Student</em></p>
 <p style="color:white;"><small>subedishwor00@gmail.com</small></p>
