--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 				<a href="https://m.youtube.com/@subedishwor"><i class="fab fa-youtube"></i></a>
 			</nav>
 		</div>
+<p style="text-align:center;"><i><b>Don't just exist, explore."</b></i></p>
 	</div>
 	<!-- Copyright Section-->
 	<footer>
