--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 		<p style="color:white; font-size:20px;"><strong>Ishwor Subedi</strong></p>
 		<p style="color:white;"><em>Student</em></p>
 		<p style="color:white;"><small>subedishwor00@gmail.com</small></p>
+                <p style="color:white;"><i><b>Don't just exist, explore."</b></i></p>
 		<div class="social-media">
 			<nav>
 				<a href="https://www.facebook.com/1ntrovertt"><i class="fab fa-facebook"></i></a>
@@ -84,7 +85,6 @@
 				<a href="https://m.youtube.com/@subedishwor"><i class="fab fa-youtube"></i></a>
 			</nav>
 		</div>
-<p style="text-align:center;"><i><b>Don't just exist, explore."</b></i></p>
 	</div>
 	<!-- Copyright Section-->
 	<footer>
