--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Ishwor Subedi Official Website</title>
+<head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8359940217023399"
+
+     crossorigin="anonymous"></script>
+	<title>Subedishwor</title>
 	<!-- Font Awesome icons (free version)-->
 	<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
 	<!-- Core theme CSS (includes Bootstrap)-->
