--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<a href="https://www.facebook.com/1ntrovertt"><i class="fab fa-facebook"></i></a>
 				<a href="https://www.instagram.com/subedishwor1/"><i class="fab fa-instagram"></i></a>
 				<a href="https://mobile.twitter.com/subedishwor"><i class="fab fa-twitter"></i></a>
-				<a href="https://m.youtube.com/@subedishwor"><i class="fab fa-youtube"></i></a>
+				<a href="https://www.youtube.com/@syrthalian"><i class="fab fa-youtube"></i></a>
 			</nav>
 		</div>
 	</div>
