--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+1
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,7 +22,8 @@
         <p style="color:white;"><em>Student</em></p>
         <p style="color:white;"><small>subedishwor00@gmail.com</small></p>
 
-    
+    <div id="quote" <font color="white">class="quote"><i><b>"Syrthalian"</b></i></div>
+  </div>
 
   <div class="social-media">
            <nav>
