--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p style="color:white;"><em>Student</em></p>
         <p style="color:white;"><small>subedishwor00@gmail.com</small></p>
 
-    <div id="quote" <font color="white">class="quote"><i><b>"Syrthalian"</b></i></div>
+    <div id="quote" class="quote"><i><b>"Life is short, make it sweet."</b></i></div>
   </div>
 
   <div class="social-media">
@@ -79,4 +79,5 @@
     <marquee><font color="red"><b>&copy; All rights reserved</b></font></marquee>
   </footer>
 </body>
-</html>
+                                                                  </html>
+                                                                  
